SEO Configuration Completed

--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,8 @@ SECIL_SECRET_TOKEN=YOUR_SECRET_TOKEN
 
 # Environment
 NODE_ENV=development
+
+# SEO Configuration
+NEXT_PUBLIC_BASE_URL=https://your-domain.com
+NEXT_PUBLIC_SITE_NAME=Collection Management Platform
+NEXT_PUBLIC_TWITTER_HANDLE=@yourhandle
